--- a/part2.ipynb
+++ b/part2.ipynb
@@ -173,6 +173,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "256a25fd",
+   "metadata": {},
+   "source": [
+    "## (c)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "b8d85df2",
@@ -258,9 +266,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7afcdc99",
+   "metadata": {},
+   "source": [
+    "## (d)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b786ab18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.7618149748643112)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def L_epislon(epislon, u_i):\n",
+    "    if abs(u_i) <= epislon:\n",
+    "        return 0.5 * u_i ** 2\n",
+    "    else:\n",
+    "        return epislon * (abs(u_i) - 0.5 * epislon)\n",
+    "    \n",
+    "def l1_norm(u, epislon):\n",
+    "    N = len(u)\n",
+    "    norm = 0\n",
+    "    for i in range(N):\n",
+    "        norm += L_epislon(epislon, u[i])\n",
+    "    return norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79fff8ea",
    "metadata": {},
    "outputs": [],
    "source": []
