--- a/part2.ipynb
+++ b/part2.ipynb
@@ -302,7 +302,15 @@
     "    norm = 0\n",
     "    for i in range(N):\n",
     "        norm += L_epislon(epislon, u[i])\n",
-    "    return norm"
+    "    return norm\n",
+    "\n",
+    "def L_epislon_grad(epislon, u_i):\n",
+    "    if u_i < -epislon:\n",
+    "        return -epislon\n",
+    "    elif u_i > epislon:\n",
+    "        return epislon\n",
+    "    else:\n",
+    "        return u_i"
    ]
   },
   {
