--- a/part2.ipynb
+++ b/part2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "9550f23e",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "ec9a1fa9",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "49cd7fd6",
    "metadata": {},
    "outputs": [
@@ -126,17 +126,16 @@
     "    ry = vec_a(c, N)\n",
     "\n",
     "    I = np.eye(N)\n",
+    "    S_xy = np.block([[Sx, np.zeros_like(Sx)],\n",
+    "                     [np.zeros_like(Sx), Sy]])\n",
+    "    I_block = np.block([[I, -I],\n",
+    "                        [-I, I]])\n",
+    "    r_xy = np.concatenate([xbar * rx, ybar * ry])\n",
     "\n",
-    "    H11 = Sx.T @ Sx + gamma * I\n",
-    "    H22 = Sy.T @ Sy + gamma * I\n",
-    "    H12 = -gamma * I\n",
-    "    H = np.block([[H11, H12],\n",
-    "                  [H12, H22]])\n",
+    "    lhs = S_xy.T @ S_xy + gamma * I_block\n",
+    "    rhs = - S_xy.T @ r_xy\n",
     "\n",
-    "    rhs = -np.concatenate([xbar * (Sx.T @ rx),\n",
-    "                           ybar * (Sy.T @ ry)])\n",
-    "\n",
-    "    z = np.linalg.inv(H) @ rhs\n",
+    "    z = np.linalg.inv(lhs) @ rhs\n",
     "    u = z[:N]\n",
     "    v = z[N:]\n",
     "\n",
@@ -173,16 +172,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "256a25fd",
-   "metadata": {},
-   "source": [
-    "## (c)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "b8d85df2",
    "metadata": {},
    "outputs": [],
@@ -210,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "6bc4e8db",
    "metadata": {},
    "outputs": [
@@ -266,30 +257,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7afcdc99",
-   "metadata": {},
-   "source": [
-    "## (d)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b786ab18",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(0.7618149748643112)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def L_epislon(epislon, u_i):\n",
     "    if abs(u_i) <= epislon:\n",
@@ -312,14 +284,6 @@
     "    else:\n",
     "        return u_i"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79fff8ea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
